<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vn.com.arilliance.bliss.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile_main_activity"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/txt_app_label_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/logo_label"
            android:textStyle="italic"
            android:textColor="@color/mainColor"
            android:gravity="center"
            android:text="@string/login_title"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_label"
            android:textStyle="italic"
            android:textColor="@color/mainColor"
            android:gravity="center"
            android:text="Version"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="1">
            <LinearLayout
                android:id="@+id/layout_take_camera_main_activity"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/border_square_green_with_green_border"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:clickable="true"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/camera_icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_label"
                    android:text="@string/take_camera_main_menu"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_gallery_main_activity"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/border_square_green_with_green_border"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:clickable="true"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/gallery_icon"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_label"
                    android:text="@string/gallery"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_setting_main_activity"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/border_square_green_with_green_border"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/setting_icon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_label"
                android:text="@string/setting"/>
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txt_logout_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_label"
        android:text="@string/logout"
        android:clickable="true"
        android:visibility="gone"/>
</RelativeLayout>
